# SWITCH_bert

./: .gitignore  README.md  example_config.yaml  main.py  manual_test.py  pyproject.toml  requirements.txt  test_gen_result.py
examples/: README.md  custom_training.py  manual_test.py  quick_start.py  separate_files_example.py
social_worker_bert/: __init__.py  augmentation.py  config.py  data.py  inference.py  models.py  pipeline.py  training.py
