[project]
name = "switch-bert"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.0",
    "pandas>=2.3.0",
    "scikit-learn>=1.7.0",
    "torch>=2.7.1",
    "transformers>=4.52.4",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
